# paddle-tools

./: README.md
inference/: README.md  infer_resnet.py  print_allops.py
inference_cxx/: compile.sh  note.md  trt_fp32_test.cc
paddle-lite/light_model/: CMakeLists.txt  mobilenet_light_api.cc
paddle-lite/win-demo/: CMakeLists.txt  build.bat  main.cc
program_model/: create_model.py  test_trt_convert_nearest_interp_v2.py
program_model/inter_model/: infernece.pdmodel
program_model/model/: inference.pdmodel
program_model/near_interp/: inference.pdmodel
train/: README.md  fc.py
